{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 203,
  "lineage": "56239921-e9c0-3451-85c9-346ca00c750b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "k3s-server-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:loadbalancer/net/k3s-server-tcp-lb/3318832e41270418",
            "arn_suffix": "net/k3s-server-tcp-lb/3318832e41270418",
            "dns_name": "k3s-server-tcp-lb-3318832e41270418.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:loadbalancer/net/k3s-server-tcp-lb/3318832e41270418",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k3s-server-tcp-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05510c44c140df32c"
              },
              {
                "subnet_id": "subnet-0632b5247009cd914"
              },
              {
                "subnet_id": "subnet-0af7e18735801b50f"
              }
            ],
            "subnets": [
              "subnet-05510c44c140df32c",
              "subnet-0632b5247009cd914",
              "subnet-0af7e18735801b50f"
            ],
            "tags_all": {
              "Owner": "Terraform",
              "PortfolioTag": "k3s-poc",
              "ProductTag": "k3s-poc",
              "UUID": "123456"
            },
            "vpc_id": "vpc-0c0537324b4a8cdcd",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "k3s-server-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:listener/net/k3s-server-tcp-lb/3318832e41270418/ea634407b9cd269d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:targetgroup/tf-20210920222537646800000002/aea81ac1c812d6d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:listener/net/k3s-server-tcp-lb/3318832e41270418/ea634407b9cd269d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:loadbalancer/net/k3s-server-tcp-lb/3318832e41270418",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Owner": "Terraform",
              "PortfolioTag": "k3s-poc",
              "ProductTag": "k3s-poc",
              "UUID": "123456"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.k3s-server-lb",
            "aws_lb_target_group.k3s-server-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "k3s-server-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:targetgroup/tf-20210920222537646800000002/aea81ac1c812d6d5",
            "arn_suffix": "targetgroup/tf-20210920222537646800000002/aea81ac1c812d6d5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:882939736860:targetgroup/tf-20210920222537646800000002/aea81ac1c812d6d5",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-20210920222537646800000002",
            "port": 6443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "Owner": "Terraform",
              "PortfolioTag": "k3s-poc",
              "ProductTag": "k3s-poc",
              "UUID": "123456"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c0537324b4a8cdcd"
          },
          "dependencies": [
            "aws_lb.k3s-server-lb"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-strict",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:882939736860:security-group/sg-0aee0d94a1709ac3e",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aee0d94a1709ac3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "allow-strict",
            "name_prefix": "",
            "owner_id": "882939736860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-strict"
            },
            "tags_all": {
              "Name": "allow-strict",
              "Owner": "Terraform",
              "PortfolioTag": "k3s-poc",
              "ProductTag": "k3s-poc",
              "UUID": "123456"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0537324b4a8cdcd"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}